--- a/lab8part3/ram32x4.cmp
+++ b/lab8part3/ram32x4.cmp
@@ -17,10 +17,11 @@
 component ram32x4
 	PORT
 	(
-		address		: IN STD_LOGIC_VECTOR (4 DOWNTO 0);
 		clock		: IN STD_LOGIC  := '1';
 		data		: IN STD_LOGIC_VECTOR (3 DOWNTO 0);
-		wren		: IN STD_LOGIC ;
+		rdaddress		: IN STD_LOGIC_VECTOR (4 DOWNTO 0);
+		wraddress		: IN STD_LOGIC_VECTOR (4 DOWNTO 0);
+		wren		: IN STD_LOGIC  := '0';
 		q		: OUT STD_LOGIC_VECTOR (3 DOWNTO 0)
 	);
 end component;
